--- a/reasons-to-choose-a-var/choose-a-var.html
+++ b/reasons-to-choose-a-var/choose-a-var.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Reasons To Choose A Var</title>
+    <title>Reasons To Choose A VAR</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
