--- a/reasons-to-choose-a-var/choose-a-var.html
+++ b/reasons-to-choose-a-var/choose-a-var.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
-                      <h1><center>Reasons To Choose A Var</center></h1>
+                      <h1><center>Reasons To Choose A VAR</center></h1>
                         <p class="tm-color-gray">
                           <br><p>When it comes to managing IT services, many businesses have found success by working with a value-added reseller (VAR). A VAR is a third-party vendor that provides businesses with access to specialized IT services and products. <a href="https://www.duocircle.com/content/msp-partner-program">VAR</a> can provide businesses with a range of IT solutions and services, including hardware and software, <strong>technical support</strong>, and other services that can help businesses increase productivity and efficiency.</p>
 <p>&nbsp;By partnering with a VAR, businesses can receive a customized IT solution that meets their specific needs. This blog post will discuss some of the key reasons why businesses should consider partnering with a VAR when seeking IT services. From cost savings to <strong>increased technical support options</strong>, <em>a VAR can provide a variety of benefits that can help businesses make the most of their IT investments.</em></p>
